--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,15 @@ grobid/
 *.bak
 dump.rdb
 
+# MongoDB data files
+mongodb_data/
+
+# SSH keys and credentials
+*.pem
+id_rsa*
+id_ed25519*
+*.key
+
 # Editor temp/swap files
 *.swp
 *~
