--- a/requirements.txt
+++ b/requirements.txt
@@ -1,132 +1,39 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.15
-aiosignal==1.4.0
-annotated-types==0.7.0
-anyio==4.10.0
-attrs==25.3.0
-backoff==2.2.1
-bcrypt==4.3.0
-build==1.3.0
-cachetools==5.5.2
-certifi==2025.8.3
-cffi==1.17.1
-charset-normalizer==3.4.2
-chromadb==1.0.15
-click==8.2.1
-colorama==0.4.6
-coloredlogs==15.0.1
-cryptography==45.0.5
-dataclasses-json==0.6.7
-distro==1.9.0
-dnspython==2.7.0
-duckdb==1.3.2
-durationpy==0.10
-ecdsa==0.19.1
-email_validator==2.2.0
+# Core Framework
 fastapi==0.116.1
-filelock==3.18.0
-filetype==1.2.0
-flatbuffers==25.2.10
-frozenlist==1.7.0
-fsspec==2025.7.0
-google-ai-generativelanguage==0.6.18
-google-api-core==2.25.1
-google-auth==2.40.3
-googleapis-common-protos==1.70.0
-greenlet==3.2.3
-grpcio==1.74.0
-grpcio-status==1.74.0
-h11==0.16.0
-httpcore==1.0.9
-httptools==0.6.4
-httpx==0.28.1
-httpx-sse==0.4.1
-huggingface-hub==0.34.3
-humanfriendly==10.0
-idna==3.10
-importlib_metadata==8.7.0
-importlib_resources==6.5.2
-jsonpatch==1.33
-jsonpointer==3.0.0
-jsonschema==4.25.0
-jsonschema-specifications==2025.4.1
-kubernetes==33.1.0
+uvicorn==0.35.0
+python-dotenv==1.1.1
+pydantic==2.11.7
+pydantic-settings==2.10.1
+python-multipart==0.0.20
+email-validator
+
+# Database
+motor==3.7.1
+pymongo==4.13.2
+
+# Authentication
+python-jose==3.5.0
+passlib==1.7.4
+bcrypt==4.3.0
+
+# Vector Store & RAG
+chromadb==1.0.15
 langchain==0.3.27
 langchain-community==0.3.27
 langchain-core==0.3.72
-langchain-google-genai==2.1.9
-langchain-text-splitters==0.3.9
-langsmith==0.4.11
-markdown-it-py==3.0.0
-marshmallow==3.26.1
-mdurl==0.1.2
-mmh3==5.2.0
-motor==3.7.1
-mpmath==1.3.0
-multidict==6.6.3
-mypy_extensions==1.1.0
-numpy==2.3.2
-oauthlib==3.3.1
-onnxruntime==1.22.1
-opentelemetry-api==1.36.0
-opentelemetry-exporter-otlp-proto-common==1.36.0
-opentelemetry-exporter-otlp-proto-grpc==1.36.0
-opentelemetry-proto==1.36.0
-opentelemetry-sdk==1.36.0
-opentelemetry-semantic-conventions==0.57b0
-orjson==3.11.1
-overrides==7.7.0
-packaging==25.0
-passlib==1.7.4
-posthog==5.4.0
-propcache==0.3.2
-proto-plus==1.26.1
-protobuf==6.31.1
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pybase64==1.4.2
-pycparser==2.22
-pydantic==2.11.7
-pydantic-settings==2.10.1
-pydantic_core==2.33.2
-Pygments==2.19.2
-pymongo==4.13.2
+langchain-chroma
+sentence-transformers
+
+# LLM & ML
+transformers
+torch
+
+# PDF Processing
 pypdf==5.9.0
-PyPika==0.48.9
-pyproject_hooks==1.2.0
-pyreadline3==3.5.4
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.1
-python-jose==3.5.0
-python-multipart==0.0.20
-PyYAML==6.0.2
-referencing==0.36.2
-requests==2.32.4
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-rich==14.1.0
-rpds-py==0.26.0
-rsa==4.9.1
-setuptools==80.9.0
-shellingham==1.5.4
-six==1.17.0
-sniffio==1.3.1
-SQLAlchemy==2.0.42
-starlette==0.47.2
-sympy==1.14.0
-tenacity==9.1.2
-tokenizers==0.21.4
-tqdm==4.67.1
-typer==0.16.0
-typing-inspect==0.9.0
-typing-inspection==0.4.1
-typing_extensions==4.14.1
-urllib3==2.5.0
-uvicorn==0.35.0
-watchfiles==1.1.0
-websocket-client==1.8.0
-websockets==15.0.1
-wheel==0.45.1
-yarl==1.20.1
-zipp==3.23.0
-zstandard==0.23.0
+PyPDF2
+
+# Async File Operations
+aiofiles
+
+# Web Search
+duckduckgo-search
